# CW_5.1-habits

./: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yml  groups_fixture.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: create_user.py  telebot.py
users/migrations/: 0001_initial.py  0002_user_username.py  0003_alter_user_username.py  0004_remove_user_username.py
