[tool.poetry]
name = "cw-5-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cw_5"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.3"
docker = "^7.1.0"
requests = "^2.32.4"
celery = "^5.5.3"
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.1"
dotenv = "^0.9.9"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.10"
redis = "^6.2.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.5.0"
drf-yasg = "^1.21.10"
django-filter = "^25.1"
django-cors-headers = "4.7.0"
pillow = "^11.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
